--- a/02_notasDoAluno.html
+++ b/02_notasDoAluno.html
@@ -6,12 +6,12 @@
     Identifique a maior nota, a menor nota e também calcule a média obtida pelo aluno.
     */
 
-    //Entrada
+    const notasAluno = [7, 5, 9, 8];
+
+    numP.sort((a, b) => a - b);
+
+    notasAluno[notasAluno.length - 1]
 
 
-    //Processamento
-
-
-    //Saída
-
+    alert(`${notasAluno}`)
 </script>
