--- a/01_tabuada.html
+++ b/01_tabuada.html
@@ -6,12 +6,11 @@
     Dica: Use o seguinte array como os números que farão a multiplicação (multiplicador): [1, 2, 3, 4, 5, 6, 7, 8, 9]
     */
 
-    //Entrada
+    const numero = Number(prompt(`Informe qual número deseja calcular a tabuada:`));
+    let multiplicacao = [1, 2, 3, 4, 5, 6, 7, 8, 9];
 
+    for (const nr of multiplicacao) {
+        document.write(`${numero} * ${nr} = ${numero * nr}<br>`); 
+    }
 
-    //Processamento
-
-
-    //Saída
-    
 </script>
