--- a/06_comprasMercado.html
+++ b/06_comprasMercado.html
@@ -6,12 +6,17 @@
     Some os números da lista e apresente o resultado.
     */
 
-    //Entrada
+    let lista = ["A", "E", 2, 4.8, "CINQUENTA", "Araquari", 80, 10, 3.2];
 
+    let soma = 0;
 
-    //Processamento
+    for (let i = 0; i < lista.length; i++) {
+        if (typeof lista[i] === 'number') {
+            soma += lista[i];
+        }
+    }
 
+   alert("A soma dos números na lista é: " + soma);
 
-    //Saída
 
 </script>
