--- a/08_cidadesEstados.html
+++ b/08_cidadesEstados.html
@@ -7,12 +7,38 @@
     No final do programa apresente os estados com as suas respectivas cidades. Porém, ordene a apresentação das listas, apresentando de forma decrescente pela quantidade de cidades que o estado possui.
     */
 
-    //Entrada
+    let cidades = ["Porto Alegre", "Curitiba", "Florianópolis", "Joinville", "Blumenau", "Gramado", "Santa Maria", "Londrina", "Itajaí"];
 
 
-    //Processamento
+    let estados = [];
 
 
-    //Saída
+    for (const cidade of cidades) {
+        const estado = prompt(`A cidade ${cidade} pertence a qual estado?`);
+
+
+        if (!estados[estado]) {
+            estados[estado] = [];
+        }
+
+        estados[estado].push(cidade);
+    }
+
+
+    let estadosArray = [];
+    for (const estado in estados) {
+        estadosArray.push({ nome: estado, cidades: estados[estado] });
+    }
+
+
+    estadosArray.sort((a, b) => b.cidades.length - a.cidades.length);
+
+
+    for (const estadoObj of estadosArray) {
+        const estado = estadoObj.nome;
+        const cidadesDoEstado = estadoObj.cidades;
+        document.write(`Estado: ${estado}`);
+        document.write(`Cidades: ${cidadesDoEstado.join(', ')}`);
+    }
 
 </script>
